# tapl

./: LICENSE  README.md  stack.yaml  tapl.cabal
04-arith/: Ast.hs  README.md  test.f
app/: Main.hs
arith/: Ast.hs  Eval.hs  Main.hs  Parser.hs  Test.hs  arith.cabal
arith/app/: Main.hs
arith/examples/: test.f
arith/src/: .Syntax.hs.swp  Core.hs  Parser.hs  Syntax.hs
arith/test/: CoreSpec.hs  ParserSpec.hs
src/Arith/: Ast.hs  Eval.hs  Parser.hs
support/: support.cabal
support/src/: Support.hs
untyped/: README.md  Syntax.hs  untyped.cabal
untyped/app/: Main.hs
untyped/examples/: test.f
untyped/src/: Core.hs  Parser.hs
