name:                tapl
version:             0.1.0.0
synopsis:            Haskell implementation of Benjamin Pierce's
                     Types and Programming Languages Edit
description:         See README.md
homepage:            https://github.com/mmachenry/tapl#readme
license:             MIT
license-file:        LICENSE
author:              Mike MacHenry
maintainer:          mike.machenry@gmail.com
copyright:           2017 Mike MacHenry
category:            Programming Languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arith.Eval
                     , Arith.Ast
                     , Arith.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable tapl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tapl
  default-language:    Haskell2010

test-suite tapl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tapl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mmachenry/tapl
