name:                arith
version:             0.1.0.0
-- license:             BSD3
-- license-file:        LICENSE
-- author:              Mike MacHenry
-- maintainer:          mike.machenry@gmail.com
-- copyright:           2017 Mike MacHenry
-- category:            programming-languages
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser, Syntax, Core
  build-depends:       base
                     , parsec
                     , support
  default-language:    Haskell2010

-- test-suite tapl-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , tapl
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

