name:                arith
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser, Syntax, Core
  build-depends:       base
                     , parsec
                     , support

test-suite arith-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParserSpec
  build-depends:       base
                     , arith
                     , hspec
                     , parsec
  default-language:    Haskell2010
