name:                support
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Support
  build-depends:       base
  default-language:    Haskell2010

test-suite support-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , support
                     , hspec
  default-language:    Haskell2010
